src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;



@layer base {
  :root {
    --app-scale: 1;
    --background: 39 100% 97%;            /* soft yellowish beige */
    --foreground: 147 41% 16%;            /* dark green */

    --card: 0 0% 100%;
    --card-foreground: 147 41% 16%;

    --popover: 39 100% 97%;
    --popover-foreground: 147 41% 16%;

    --primary: 147 41% 16%;               /* logo green */
    --primary-foreground: 39 100% 97%;    /* light on green */

    --secondary: 14 86% 57%;              /* reddish rolling pin */
    --secondary-foreground: 39 100% 97%;

    --accent: 39 100% 80%;                /* yellow/orange base */
    --accent-foreground: 147 41% 16%;

    --destructive: 0 70% 50%;
    --destructive-foreground: 39 100% 97%;

    --success: 141 63% 45%; /* #2ECC71 */
    --success-foreground: 210 40% 98%;

    --border: 39 100% 90%;
    --input: 39 100% 90%;
    --ring: 147 41% 16%;

    --chart-1: 168 59% 54%; /* Primary */
    --chart-2: 197 100% 12%; /* Teal */
    --chart-3: 340 100% 94%; /* Accent */
    --chart-4: 43 74% 66%;
    --chart-5: 27 87% 67%;

    --radius: 0.5rem;
  }

  .dark {
    --background: 147 41% 16%;
    --foreground: 39 100% 97%;

    --card: 147 41% 16%;
    --card-foreground: 39 100% 97%;

    --popover: 147 41% 16%;
    --popover-foreground: 39 100% 97%;

    --primary: 39 100% 97%;
    --primary-foreground: 147 41% 16%;

    --secondary: 14 86% 47%;
    --secondary-foreground: 39 100% 97%;

    --accent: 39 100% 70%;
    --accent-foreground: 147 41% 16%;

    --destructive: 0 70% 40%;
    --destructive-foreground: 39 100% 97%;

    --border: 147 41% 25%;
    --input: 147 41% 25%;
    --ring: 39 100% 70%;

    --chart-1: 168 59% 54%;
    --chart-2: 340 100% 94%;
    --chart-3: 43 74% 66%;
    --chart-4: 197 37% 24%;
    --chart-5: 27 87% 67%;
  }
}




@layer base {
  html {
    font-size: calc(var(--app-scale) * 100%);
  }
  * {
    @apply border-border outline-ring/50;
  }
  body {
    @apply bg-background text-foreground;
  }
}


.text-green {
  color: var(--success);
}

